force-app/main/default/objects/SAI_Delivery_Control__c/SAI_Delivery_Control__c.object-meta.xml
<CustomObject>
    <label>SAI Delivery Control</label>
    <nameField>
        <displayFormat>DC-{00000000}</displayFormat>
        <label>SAI Delivery Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Delivery Control Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>