force-app/main/default/objects/SAI_Delivery_Control__c/fields/Delivery_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Source_System__c</fullName>
    <label>Delivery Source System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>