force-app/main/default/objects/SAI_Delivery_Control__c/fields/Delivery_Source_System_Extraction_DateTi__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Source_System_Extraction_DateTi__c</fullName>
    <label>Delivery Source System Extraction DateTi</label>
    <type>DateTime</type>
</CustomField>