force-app/main/default/objects/SAI_Delivery_Control__c/fields/End_Of_Month_indicator__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Month_indicator__c</fullName>
    <label>End Of Month indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>