force-app/main/default/objects/SAI_Delivery_Control__c/fields/End_Of_Week_Indicator__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Week_Indicator__c</fullName>
    <label>End Of Week Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>