force-app/main/default/objects/SAI_Delivery_Control__c/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <label>Reporting Date</label>
    <type>DateTime</type>
</CustomField>