force-app/main/default/objects/SAI_Delivery_Control__c/fields/Reporting_Date_End_Of_Day_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date_End_Of_Day_Indicator__c</fullName>
    <label>Reporting Date End Of Day Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>